--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,9 @@ dependencies {
 
     implementation 'com.facebook.stetho:stetho:1.5.1'
 
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
